sku stock api
